--- a/index.html
+++ b/index.html
@@ -101,8 +101,9 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-8 col-md-offset-2">
-                    <h2 class="section-heading">Discover what all the buzz is about!</h2>
-                    <p>Our app is available on any mobile device! Download now to get started!</p>
+                    <h2 class="section-heading">Obten nuestra aplicacion aqui!</h2>
+                    <a class="btn btn-outline btn-xl page-scroll" href="#" role="button" style="width: 800px; padding ;">Descargar APK</a>
+                    <p>Pronto estaremos en tus tiendas moviles favoritas!</p>
                     <div class="badges">
                         <a class="badge-link" href="#"><img src="img/google-play-badge.svg" alt=""></a>
                         <a class="badge-link" href="#"><img src="img/app-store-badge.svg" alt=""></a>
