--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             <div class="row">
                 <div class="col-md-8 col-md-offset-2">
                     <h2 class="section-heading">Obten nuestra aplicacion aqui!</h2>
-                    <a class="btn btn-outline btn-xl page-scroll" href="#" role="button" style="width: 100%;">Descargar APK</a>
+                    <a class="btn btn-outline btn-xl page-scroll" href="../Pageapk/apk/app-release.apk" download="app-release.apk" role="button" style="width: 100%;">Descargar APK</a>
                     <p>Pronto estaremos en tus tiendas moviles favoritas!</p>
                     <div class="badges">
                         <a class="badge-link" href="#"><img src="img/google-play-badge.svg" alt=""></a>
