--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <div class="section-heading">
-                        <h2>Unlimited Features, Unlimited Fun</h2>
-                        <p class="text-muted">Check out what you can do with this app theme!</p>
+                        <h2>Optimizamos tiempo de clases para ser usado en lo que importa ¡aprender!</h2>
+                        <p class="text-muted">Registrarse en un clase al alcance de un QR!</p>
                         <hr>
                     </div>
                 </div>
@@ -145,15 +145,15 @@
                             <div class="col-md-6">
                                 <div class="feature-item">
                                     <i class="icon-screen-smartphone text-primary"></i>
-                                    <h3>Device Mockups</h3>
-                                    <p class="text-muted">Ready to use HTML/CSS device mockups, no Photoshop required!</p>
+                                    <h3>Portabilidad</h3>
+                                    <p class="text-muted">Actualmente todos contamos con un smartphone!</p>
                                 </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="feature-item">
                                     <i class="icon-camera text-primary"></i>
-                                    <h3>Flexible Use</h3>
-                                    <p class="text-muted">Put an image, video, animation, or anything else in the screen!</p>
+                                    <h3>Solo permisos necesarios!</h3>
+                                    <p class="text-muted">Para mas seguridad para el alumno, solo solicitamos permisos para la camara!</p>
                                 </div>
                             </div>
                         </div>
@@ -161,15 +161,15 @@
                             <div class="col-md-6">
                                 <div class="feature-item">
                                     <i class="icon-present text-primary"></i>
-                                    <h3>Free to Use</h3>
-                                    <p class="text-muted">As always, this theme is free to download and use for any purpose!</p>
+                                    <h3>Libre de uso</h3>
+                                    <p class="text-muted">Nuestra app es totalmente gratis, solo tienes que descargar y escanear!</p>
                                 </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="feature-item">
-                                    <i class="icon-lock-open text-primary"></i>
-                                    <h3>Open Source</h3>
-                                    <p class="text-muted">Since this theme is MIT licensed, you can use it commercially!</p>
+                                    <i class="icon-user text-primary"></i>
+                                    <h3>Cuenta DUOC UC</h3>
+                                    <p class="text-muted">Utilizado directamente con tu cuenta DUOC UC para enviar los datos correctos al profesor!</p>
                                 </div>
                             </div>
                         </div>
