color background updated

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <div class="section-heading">
-                        <h2>Optimizamos tiempo de clases para ser usado en lo que importa ¡aprender!</h2>
+                        <h2>Optimizamos tiempo de clases para ser usado en lo que importa, ¡Aprender!</h2>
                         <p class="text-muted">Registrarse en un clase al alcance de un QR!</p>
                         <hr>
                     </div>
@@ -182,8 +182,8 @@
     <section class="cta">
         <div class="cta-content">
             <div class="container">
-                <h2>Stop waiting.<br>Start building.</h2>
-                <a href="#contact" class="btn btn-outline btn-xl page-scroll">Let's Get Started!</a>
+                <h2>Próximamente disponible para usuarios IOS<br></h2>
+                <a href="#page-top" class="btn btn-outline btn-xl page-scroll">Llevame al inicio!</a>
             </div>
         </div>
         <div class="overlay"></div>
@@ -191,16 +191,20 @@
 
     <section id="contact" class="contact bg-primary">
         <div class="container">
-            <h2>We <i class="fa fa-heart"></i> new friends!</h2>
+            <h2>Sigue nuestras actualizaciones <i class="fa fa-heart"></i></h2>
             <ul class="list-inline list-social">
-                <li class="social-twitter">
-                    <a href="#"><i class="fa fa-twitter"></i></a>
+                <li>
+                    
+                    <a href="https://github.com/kennyalexander">
+                    <img class="imageslogo" src="img\github_png.png" style="height: 85px; width: 100px; padding-inline-start: 15px; padding-bottom: 10px;">
+                    </a>
+                    <h4>Kenny Castillo</h4>
                 </li>
-                <li class="social-facebook">
-                    <a href="#"><i class="fa fa-facebook"></i></a>
-                </li>
-                <li class="social-google-plus">
-                    <a href="#"><i class="fa fa-google-plus"></i></a>
+                <li>
+                    <a href="https://github.com/Jo-gonzalezu">
+                    <img class="imageslogo" src="img\github_png.png" style="height: 85px; width: 100px; padding-inline-start: 15px; padding-bottom: 10px;">
+                    </a>
+                    <h4>Jorge Gonzalez</h4>
                 </li>
             </ul>
         </div>
@@ -208,7 +212,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2016 Start Bootstrap. All Rights Reserved.</p>
+            <p>&copy; Designed by Kenny Castillo - Jorge González, 2022 Company Inc</p>
             <ul class="list-inline">
                 <li>
                     <a href="#">Privacy</a>
