--- a/index.html
+++ b/index.html
@@ -196,15 +196,15 @@
                 <li>
                     
                     <a href="https://github.com/kennyalexander">
-                    <img class="imageslogo" src="img\github_png.png" style="height: 85px; width: 100px; padding-inline-start: 15px; padding-bottom: 10px;">
+                    <img class="imageslogo" src="img\github_png.png" style="height: 115px; width: 130px;">
                     </a>
-                    <h4>Kenny Castillo</h4>
+                    <h4 style="padding-top: 35px; padding-left: 6px;">Kenny Castillo</h4>
                 </li>
-                <li>
+                <li style="padding-left: 50px;">
                     <a href="https://github.com/Jo-gonzalezu">
-                    <img class="imageslogo" src="img\github_png.png" style="height: 85px; width: 100px; padding-inline-start: 15px; padding-bottom: 10px;">
+                        <img class="imageslogo" src="img\github_png.png" style="height: 115px; width: 130px;">
                     </a>
-                    <h4>Jorge Gonzalez</h4>
+                    <h4 style="padding-top: 35px; padding-left: 2px;">Jorge Gonzalez</h4>
                 </li>
             </ul>
         </div>
