--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                         <a class="page-scroll" href="#download">Descargar</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#features">Descripcion</a>
+                        <a class="page-scroll" href="#features">Descripción</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#contact">Creadores</a>
@@ -73,8 +73,8 @@
                 <div class="col-sm-7">
                     <div class="header-content">
                         <div class="header-content-inner">
-                            <h1>Es momento de actualizar la forma que indicamos estar presente en el aula, unete a nuestra forma de decir ¡Presente!</h1>
-                            <a href="#download" class="btn btn-outline btn-xl page-scroll">Di presente ahora!</a>
+                            <h1>Es momento de cambiar la forma que indicamos estar presente en el aula. Unete a nuestra forma de decir ¡Presente!</h1>
+                            <a href="#download" class="btn btn-outline btn-xl page-scroll">¡Di presente ahora!</a>
                         </div>
                     </div>
                 </div>
@@ -101,9 +101,9 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-8 col-md-offset-2">
-                    <h2 class="section-heading">Obten nuestra aplicacion aqui!</h2>
+                    <h2 class="section-heading">Obten nuestra aplicación aquí</h2>
                     <a class="btn btn-outline btn-xl page-scroll" href="../Pageapk/apk/app-release.apk" download="app-release.apk" role="button" style="width: 100%;">Descargar APK</a>
-                    <p>Pronto estaremos en tus tiendas moviles favoritas!</p>
+                    <p>Pronto estaremos en tus tiendas móviles favoritas</p>
                     <div class="badges">
                         <a class="badge-link" href="#"><img src="img/google-play-badge.svg" alt=""></a>
                         <a class="badge-link" href="#"><img src="img/app-store-badge.svg" alt=""></a>
@@ -119,7 +119,7 @@
                 <div class="col-lg-12 text-center">
                     <div class="section-heading">
                         <h2>Optimizamos tiempo de clases para ser usado en lo que importa, ¡Aprender!</h2>
-                        <p class="text-muted">Registrarse en un clase al alcance de un QR!</p>
+                        <p class="text-muted">Ahora registrar tu asistencia esta al alcance de un QR.</p>
                         <hr>
                     </div>
                 </div>
@@ -131,7 +131,7 @@
                             <div class="device">
                                 <div class="screen">
                                     <!-- Demo image for screen mockup, you can put an image here, some HTML, an animation, video, or anything else! -->
-                                    <img src="img/demo-screen-1.jpg" class="img-responsive" alt=""> </div>
+                                    <img src="img/demo-screen-2.jpg" class="img-responsive" alt=""> </div>
                                 <div class="button">
                                     <!-- You can hook the "home button" to some JavaScript events or just remove it -->
                                 </div>
@@ -145,15 +145,15 @@
                             <div class="col-md-6">
                                 <div class="feature-item">
                                     <i class="icon-screen-smartphone text-primary"></i>
-                                    <h3>Portabilidad</h3>
-                                    <p class="text-muted">Actualmente todos contamos con un smartphone!</p>
+                                    <h3>Accesibilidad</h3>
+                                    <p class="text-muted">Actualmente el móvil es de uso masivo, por lo que nuestra aplicación es de fácil acceso.</p>
                                 </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="feature-item">
                                     <i class="icon-camera text-primary"></i>
-                                    <h3>Solo permisos necesarios!</h3>
-                                    <p class="text-muted">Para mas seguridad para el alumno, solo solicitamos permisos para la camara!</p>
+                                    <h3>Solo permisos necesarios</h3>
+                                    <p class="text-muted">Para más seguridad del alumno, solo solicitamos permisos a la camara del smartphone.</p>
                                 </div>
                             </div>
                         </div>
@@ -162,14 +162,14 @@
                                 <div class="feature-item">
                                     <i class="icon-present text-primary"></i>
                                     <h3>Libre de uso</h3>
-                                    <p class="text-muted">Nuestra app es totalmente gratis, solo tienes que descargar y escanear!</p>
+                                    <p class="text-muted">Nuestra app es de uso gratuito. Solo tienes que descargar y escanear.</p>
                                 </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="feature-item">
                                     <i class="icon-user text-primary"></i>
-                                    <h3>Cuenta DUOC UC</h3>
-                                    <p class="text-muted">Utilizado directamente con tu cuenta DUOC UC para enviar los datos correctos al profesor!</p>
+                                    <h3>Cuenta Duoc UC</h3>
+                                    <p class="text-muted">Enlazado directamente con tu cuenta Duoc UC para enviar los datos correctos al profesor.</p>
                                 </div>
                             </div>
                         </div>
